<resources>
   <string name="app_name">DreamTrips</string>
   <string name="web_title">Web</string>
   <string name="new_photo">Web</string>
   <string name="detailed_trip">Detailed Trip</string>
   <string name="membership">Membership</string>
   <string name="trip_images">Trip Images</string>
   <string name="bucket_list">Bucket List</string>
   <string name="my_profile">My Profile</string>
   <string name="terms">Terms</string>
   <string name="terms_of_service">Terms of Service</string>
   <string name="faq">FAQ</string>
   <string name="privacy">Privacy Policy</string>
   <string name="cookie">Cookie Policy</string>
   <string name="action_settings">Settings</string>
   <string name="action_quick_input">Quick Add</string>
   <string name="action_popular_string">Add From Popular</string>
   <string name="action_done">Done</string>
   <string name="action_cancel">Cancel</string>
   <string name="action_enroll">Enroll</string>
   <string name="action_filter">Filter</string>
   <string name="action_map">Map</string>
   <string name="action_like">Like</string>
   <string name="title_activity_login">LoginActivity</string>
   <string name="trips">DreamTrips</string>
   <string name="drawer_open">Menu Opened</string>
   <string name="drawer_close">Menu Closed</string>
   <string name="empty" translatable="false"></string>
   <string name="logout_dialog_title">Logout</string>
   <string name="logout_dialog_message">Are you sure you want to Log Out?</string>
   <string name="logout_dialog_positive_btn">Logout</string>
   <string name="logout_dialog_negative_btn">Cancel</string>
   <string name="member_images">Member Images</string>
   <string name="my_images">My Images</string>
   <string name="you_should_be_here">You Should Be Here</string>
   <string name="title_activity_full_screen_photo">DreamTrips</string>
   <string name="skip_login">Skip Login</string>
   <string name="duration">%d Nights</string>
   <string name="smth_went_wrong">Something went wrong =(</string>
   <string name="inspire_me">Inspire Me</string>
   <string name="three_sixty">360 Experience</string>
   <string name="book_it">Book It!</string>
   <string name="reload_trip_details">Reload Trip Details</string>
   <string name="title_book_it">Book It</string>
   <string name="title_enroll_it">Enroll</string>
   <string name="user_id_hint">WV Member Id</string>
   <string name="user_password_hint">WV Member Password</string>
   <string name="type_your_reason">Type your reason</string>
   <string name="filter_region_header">REGION</string>
   <string name="filter_duration_header">DURATION (NIGHTS)</string>
   <string name="filter_price_header">PRICE ($)</string>
   <string name="filter_select_all">SELECT ALL</string>
   <string name="filter_show_sold_out">SHOW SOLD OUT TRIPS</string>
   <string name="filter_theme_header">THEME</string>
   <string name="filter_no_results">Sorry, there were no results matching your criteria</string>
   <string name="filter_apply_all">APPLY FILTERS</string>
   <string name="filter_reset_all">RESET ALL</string>
   <string name="filter_reset">Reset Filters</string>
   <string name="trip_details">Trip Details</string>
   <string name="trip_featured">FEATURED TRIP</string>
   <string name="profile_from_hint">From</string>
   <string name="profile_location_hint">Lives In</string>
   <string name="profile_enroll_hint">Enroll Date</string>
   <string name="profile_birth_hint">Date of Birth</string>
   <string name="profile_user_id_hint">User ID</string>
   <string name="bucket_locations">Locations</string>
   <string name="bucket_activities">Activities</string>
   <string name="bucket_restaurants">Dining</string>
   <string name="photo_what">What</string>
   <string name="photo_what_hint">Write a brief description for your photo</string>
   <string name="photo_where">Where</string>
   <string name="photo_where_hint">Set Location</string>
   <string name="photo_when">When</string>
   <string name="photo_when_date_hint">Date</string>
   <string name="photo_when_time_hint">Time</string>
   <string name="photo_tags">Tags</string>
   <string name="photo_tags_hint">Add comma separated tags here</string>
   <string name="photo_deleted">Photo has been Deleted</string>
   <string name="photo_flagged">Photo has been Flagged</string>
   <string name="delete_photo_title">Delete Photo</string>
   <string name="delete_photo_text">Are you sure you want to delete this photo?</string>
   <string name="delete_photo_positiove">Delete</string>
   <string name="delete_photo_negative">Cancel</string>
   <string name="flag_photo_second">. Do you want to continue?</string>
   <string name="flag_photo_title">Confirm</string>
   <string name="flag_photo_positive">Send</string>
   <string name="flag_photo_negative">Cancel</string>
   <string name="flag_description_title">Flag</string>
   <string name="flag_description_positive">Accept</string>
   <string name="flag_description_negative">Cancel</string>
   <string name="log_in">Log in</string>
   <string name="error_log_in">Your login-id and/or password are incorrect - please use your WorldVentures Member-ID and Password to login</string>
   <string name="error_image_not_loaded">Image is not loaded yet</string>
   <string name="error_while_loading">Error while loading image</string>
   <string name="fab_select_album">Select Album</string>
   <string name="fab_select_photo">Select Photo</string>
   <string name="fab_posted">Successfully posted to Facebook</string>
   <string-array name="photo_dialog_items">
      <item>Take Photo</item>
      <item>Choose Photo</item>
      <item>Choose from Facebook</item>
   </string-array>
   <string-array name="share_dialog_items">
      <item>Facebook</item>
      <item>Twitter</item>
   </string-array>
   <string-array name="share_dialog_with_download_items">
      <item>Facebook</item>
      <item>Twitter</item>
      <item>Save to Gallery</item>
   </string-array>
   <string name="buffering">Buffering…</string>
   <string name="profile_select_avatar_header">Select Avatar</string>
   <string name="profile_select_cover_header">Select Cover</string>
   <string name="error_internal_server">Internal Server Error</string>
   <string name="username_empty">Username is empty</string>
   <string name="username_not_valid">Username is not valid</string>
   <string name="password_empty">Password is empty</string>
   <string name="password_not_valid">Password is not valid</string>
   <string name="bucket_list_my_title">Add items to Bucket List</string>
   <string name="bucket_list_location_popular">Popular Bucket Lists</string>
   <string name="bucket_list_activity_popular">Popular Bucket Lists Activities</string>
   <string name="bucket_list_dinning_popular">Popular Bucket Lists Dining &amp; Entertainment</string>
   <string name="bucket_list_edit_header">Edit Bucket List Item</string>
   <string name="bucket_list_add">Add %s to your bucket list</string>
   <string name="bucket_list_create_message">Currently you have no Bucket List items. You can choose from popular Bucket List items or create your own goals</string>
   <string name="bucket_list_choose">Choose From Popular Items</string>
   <string name="bucket_list_create_new">Create My Own List</string>
   <string name="bucket_list_action_create_error">Could not add Bucket List item</string>
   <string name="bucket_list_action_update_error">Could not update Bucket List item</string>
   <string name="bucket_list_action_change_order_error">Could not change Bucket List item order</string>
   <string name="bucket_list_action_delete_error">Could not delete Bucket List item</string>
   <string name="bucket_hint_title">Title</string>
   <string name="bucket_hint_description">Description</string>
   <string name="bucket_hint_description_text">Type your description here</string>
   <string name="bucket_hint_time">Time</string>
   <string name="bucket_hint_time_text">When would you like to accomplish this goal?</string>
   <string name="bucket_hint_location">Location</string>
   <string name="bucket_hint_location_text">Is there a specific location for this goal?</string>
   <string name="bucket_hint_people">People</string>
   <string name="bucket_hint_people_text">Add people with whom you want to accomplish this goal</string>
   <string name="bucket_hint_tags">Tags</string>
   <string name="bucket_hint_tags_text">Add tags that describe your bucket list item</string>
   <string name="bucket_item_edit_done">Bucket item was saved!</string>
   <string name="bucket_item_edit_error">Error encountered while saving item</string>
   <string name="bucket_item_photos">Add pictures</string>
   <string name="category">Category</string>
   <string name="bucket_added">%s is added to your bucket list</string>
   <string name="trip_liked">%s added to your Favorites</string>
   <string name="trip_unliked">%s removed from your Favorites</string>
   <string name="congrats">Congrats!</string>
   <string name="bucket_delete_undo">Item was deleted</string>
   <string name="undo">UNDO</string>
   <string name="location">location</string>
   <string name="activity">activity</string>
   <string name="dinning">dining</string>
   <string name="show_all">Show all</string>
   <string name="show_completed">Show completed</string>
   <string name="show_to_do">Show TO-DO</string>
   <string name="rep_tools">Rep Tools</string>
   <string name="success_stories">Success stories</string>
   <string name="to_do">To-Do</string>
   <string name="completed">Done</string>
   <string name="action_share">Share</string>
   <string name="recent_header">Recent Added 360 Experience</string>
   <string name="recently_added">Recently Added</string>
   <string name="featured_header">Featured 360 Experience</string>
   <string name="title_activity_success_story_details">SuccessStoryDetailsActivity</string>
   <string name="hello_world">Hello world!</string>
   <string name="ss_has_been_added_to_favorites">Success story has been added to favorites</string>
   <string name="ss_has_been_removed_from_favorites">Success story has been removed from favorites</string>
   <string name="ss_filter_show_favorites">Show Favorites</string>
   <string name="other_travel">Book Travel</string>
   <string name="training_videos">Training Videos</string>
   <string name="error_while_sync">Something went wrong</string>
   <string name="can_not_like_photo">Can\'t like photo</string>
   <string name="like">%d Like</string>
   <string name="likes">%d Likes</string>
   <string name="comment_single">%d Comment</string>
   <string name="comments">%d Comments</string>
   <string name="wrong_image">Wrong image</string>
   <string name="could_not_load">Could not load </string>
   <string name="profile_update_info">Update Info</string>
   <string name="profile_bucket_list">%d Bucket List Items</string>
   <string name="profile_post">Post</string>
   <string name="profile_friends">Friends</string>
   <string name="profile_messages">Messages</string>
   <string name="profile_more">More</string>
   <string name="profile_dream_trips">%d Dream Trips</string>
   <string name="profile_add_friend">Add Friend</string>
   <string name="social_requests">Requests</string>
   <string name="friend_reject">Reject</string>
   <string name="friend_accept">Accept</string>
   <string name="friend_hide">Hide</string>
   <string name="friend_cancel">Cancel</string>
   <string name="bucket_item_edit_completed">Mark as done!</string>
   <string name="reload_feed">Reload feed</string>
   <string name="terms_and_conditions_title">Terms and Condition</string>
   <string name="terms_and_conditions_subtitle">Please read and accept the terms and condition below to continue</string>
   <string name="terms_and_conditions_checkbox">Click here to accept terms and conditions</string>
   <string name="terms_and_conditions_accept">Opt In</string>
   <string name="terms_and_conditions_reject">Not Now</string>
   <string name="action_search_by_hashtag">Search by hashtag</string>
</resources>