<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

   <item
         android:id="@+id/action_unread_conversation"
         app:actionViewClass="com.worldventures.dreamtrips.modules.common.view.custom.BadgeImageView"
         app:showAsAction="always"
         android:title="@string/unread_conversation" />

   <item
         android:id="@+id/action_friend_requests"
         app:actionViewClass="com.worldventures.dreamtrips.modules.common.view.custom.BadgeImageView"
         app:showAsAction="always"
         android:title="@string/social_requests" />

   <item
         android:id="@+id/action_filter"
         android:icon="@drawable/ic_menu_filter"
         android:title="@string/action_filter"
         app:showAsAction="collapseActionView" />

   <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_menu_search"
         android:title="@string/action_search_by_hashtag"
         app:showAsAction="collapseActionView" />
</menu>