<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:visibility="gone">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/ic_profile_divider"
        android:contentDescription="@string/empty"/>

    <TextView
        android:id="@+id/friend_request_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/spacing_small"
        android:text="Karina has sent a request to you"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_accept"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend_reject"
            />
    </LinearLayout>


</LinearLayout>