<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/spacing_normal">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/terms_and_conditions_title"
        android:textColor="@color/black"
        android:textSize="@dimen/font_extra_large"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:text="@string/terms_and_conditions_subtitle"
        android:textColor="@color/black"
        android:textSize="@dimen/font_normal"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/subtitle"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_small"
        android:background="@color/grey_lighter"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_above="@+id/accept_checkbox"
        android:layout_below="@+id/divider"
        android:layout_marginLeft="-16dp"
        android:layout_marginRight="-16dp">

        <WebView
            android:id="@+id/terms_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <ImageButton
            android:id="@+id/btn_retry"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/spacing_normal"
            android:paddingTop="@dimen/spacing_normal"
            android:src="@drawable/ic_upload_retry"
            android:visibility="gone"/>
    </FrameLayout>

    <CheckBox
        android:id="@+id/accept_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/terms_and_conditions_checkbox"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terms_and_conditions_reject"/>

        <Button
            android:id="@+id/accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/terms_and_conditions_accept"/>
    </LinearLayout>
</RelativeLayout>