<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="false"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/header_profile"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_friend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/add_friend"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/profile_add_friend"
                android:textSize="@dimen/font_small"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/update_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_update_info"
                android:enabled="false"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/profile_update_info"
                android:textSize="@dimen/font_small"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@color/profile_spacing_color"/>

            <TextView
                android:id="@+id/trip_images"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_trip_images"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/trip_images"
                android:textSize="@dimen/font_small"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@color/profile_spacing_color"/>

            <TextView
                android:id="@+id/bucket_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_bucket_lists"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/profile_bucket_list"
                android:textSize="@dimen/font_small"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@color/profile_spacing_color"/>

            <TextView
                android:id="@+id/dream_trips"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_dreamtrips_normal"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/profile_dream_trips"
                android:textSize="@dimen/font_small"
                android:enabled="false"/>
        </LinearLayout>

        <include
            android:id="@+id/friend_request"
            layout="@layout/layout_friend_request"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/ic_profile_divider"
            android:contentDescription="@string/empty"/>

        <include layout="@layout/layout_profile_info"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/ic_profile_divider"
            android:contentDescription="@string/empty"/>

        <LinearLayout
            android:id="@+id/control_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/post"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:enabled="false"
                android:text="@string/profile_post"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@color/profile_spacing_color"/>

            <TextView
                android:id="@+id/friends"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/friends"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/profile_friends"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@color/profile_spacing_color"/>

            <TextView
                android:id="@+id/messages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/messages"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:enabled="false"
                android:text="@string/profile_messages"/>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@color/profile_spacing_color"/>

            <TextView
                android:id="@+id/more"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/more"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:enabled="false"
                android:text="@string/profile_more"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/ic_profile_divider"
            android:contentDescription="@string/empty"/>

        <include
            android:id="@+id/user_balance"
            layout="@layout/layout_user_balance"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/ic_profile_divider"
            android:contentDescription="@string/empty"/>

        <TextView
            android:id="@+id/profile_feed_reload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/tripBookItPadding"
            android:text="@string/reload_feed"
            android:textColor="@color/tripPlaceColor"
            android:textSize="22sp"
            android:visibility="gone" />

    </LinearLayout>
</merge>